ribit-ssa/src/lower/snapshots/ribit_ssa__lower__test__addi_no_src.snap
---
source: ribit-ssa/src/lower/test.rs
expression: "&block.display_instructions()"

---
%0 = args[0]
%1 = args[1]
x(%0)2 = 00000032
ret 00000001, 00000008
