ribit-ssa/src/lower/snapshots/ribit_ssa__lower__test__addi_nop.snap
---
source: ribit-ssa/src/lower/test.rs
expression: "&block.display_instructions()"

---
%0 = args[0]
%1 = args[1]
ret 00000001, 00000008
