ribit-ssa/src/lower/snapshots/ribit_ssa__lower__test__branch_0_0_eq.snap
---
source: ribit-ssa/src/lower/test.rs
expression: "&block.display_instructions()"

---
%0 = args[0]
%1 = args[1]
ret 00000000, 00000400
