ribit-ssa/src/lower/snapshots/ribit_ssa__lower__test__branch_0_x1_eq.snap
---
source: ribit-ssa/src/lower/test.rs
expression: "&block.display_instructions()"

---
%0 = args[0]
%1 = args[1]
%2 = x(%0)1
%3 = cmp EQ 00000000, %2
%4 = select %3, 00000400, 00000004
ret 00000000, %4
