ribit-ssa/src/lower/snapshots/ribit_ssa__lower__test__jalr_link_eq_src.snap
---
source: ribit-ssa/src/lower/test.rs
expression: "&block.display_instructions()"

---
%0 = args[0]
%1 = args[1]
x(%0)17 = 00010138
ret 00000000, 00010148
