ribit-ssa/src/lower/snapshots/ribit_ssa__lower__test__jalr_pc.snap
---
source: ribit-ssa/src/lower/test.rs
expression: "&block.display_instructions()"

---
%0 = args[0]
%1 = args[1]
%2 = x(%0)1
%3 = add %2, 000007fe
%4 = and %3, fffffffe
x(%0)4 = 00000034
ret 00000000, %4
